[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
shuttle-axum = { workspace = true }
shuttle-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]
axum-test = "14"

[profile.dev]
codegen-units = 1
lto = "fat"
overflow-checks = true

[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = true

[lints.clippy]
pedantic = "warn"
